tests/baselines/reference/symbolProperty56.errors.txt
symbolProperty56.ts(5,8): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.


==== symbolProperty56.ts (1 errors) ====
    var obj = {
        [Symbol.iterator]: 0
    };
    
    module M {
           ~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
        var Symbol: {};
        // The following should be of type 'any'. This is because even though obj has a property keyed by Symbol.iterator,
        // the key passed in here is the *wrong* Symbol.iterator. It is not the iterator property of the global Symbol.
        obj[Symbol["iterator"]];
    }